# easyansi

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.es.md  README.pt.md  README.zh.md  ROTEIRO_VIDEO_EXPLICATIVO.md
src/easyansi/: __init__.py  activate.py  api.py  banner.py  codes.py  logging.py  parser.py  preview.py  renderer.py  shortcuts.py  terminal.py  text.py
tests/: test_activate.py  test_api.py  test_banner.py  test_codes.py  test_logging.py  test_parser.py  test_renderer.py  test_terminal.py  test_text.py
