[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easyansi"
version = "0.3.0"
description = "Formatacao de strings no terminal com uma sintaxe simples (//cor/.../cor), sem dependencias."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Gustavo" }]
keywords = ["ansi", "color", "terminal", "console", "text", "cli", "colors", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/GustaFranz/easyansi"
Repository = "https://github.com/GustaFranz/easyansi"
Issues = "https://github.com/GustaFranz/easyansi/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/easyansi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
