[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-easyansi"
version = "0.5.0"
description = "Terminal string formatting with simple //color/ syntax. Zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Gustavo", email = "GustaFranz@users.noreply.github.com" }]
keywords = ["ansi", "color", "terminal", "console", "text", "cli", "colors", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Typing :: Typed",
    "Natural Language :: English",
    "Natural Language :: Portuguese",
    "Natural Language :: Spanish",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/GustaFranz/easyansi"
Documentation = "https://github.com/GustaFranz/easyansi#readme"
Changelog = "https://github.com/GustaFranz/easyansi/releases"
Repository = "https://github.com/GustaFranz/easyansi"
Issues = "https://github.com/GustaFranz/easyansi/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/easyansi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
